--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,37 +9,45 @@
     "ios": "expo run:ios",
     "android": "expo run:android",
     "dev": "expo start --dev-client",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
     "lint": "eslint app/ src/",
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
-    "expo": "~54.0.0",
-    "expo-router": "~4.0.0",
-    "expo-linking": "~7.0.0",
-    "expo-constants": "~17.0.0",
-    "expo-status-bar": "~2.0.0",
-    "expo-secure-store": "~14.0.0",
-    "react": "^19.0.0",
-    "react-native": "^0.79.0",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.5.0",
-    "react-native-gesture-handler": "^2.21.0",
     "@clerk/clerk-expo": "^2.10.0",
     "@expo/vector-icons": "^14.0.0",
-    "nativewind": "^4.2.2",
-    "@trpc/client": "^11.0.0",
-    "@trpc/react-query": "^11.0.0",
-    "@tanstack/react-query": "^5.62.0",
     "@humanhomes/api-client": "workspace:*",
     "@humanhomes/shared": "workspace:*",
     "@humanhomes/trpc": "workspace:*",
-    "@humanhomes/ui": "workspace:*"
+    "@humanhomes/ui": "workspace:*",
+    "@tanstack/react-query": "^5.62.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "expo": "~54.0.0",
+    "expo-constants": "~17.0.0",
+    "expo-linking": "~7.0.0",
+    "expo-router": "~4.0.0",
+    "expo-secure-store": "~14.0.0",
+    "expo-status-bar": "~2.0.0",
+    "nativewind": "^4.2.2",
+    "react": "^19.0.0",
+    "react-native": "^0.79.0",
+    "react-native-gesture-handler": "^2.21.0",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.5.0"
   },
   "devDependencies": {
     "@humanhomes/config": "workspace:*",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "jsdom": "^28.1.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.9.0"
+    "typescript": "^5.9.0",
+    "vitest": "^4.0.18"
   }
 }
