--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -10,6 +10,8 @@
   },
   "scripts": {
     "build": "tsc",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/",
     "clean": "rm -rf dist"
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@humanhomes/config": "workspace:*",
-    "typescript": "^5.9.0"
+    "typescript": "^5.9.0",
+    "vitest": "^4.0.18"
   }
 }
