--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "packageManager": "pnpm@9.15.0",
   "engines": {
     "node": ">=20.0.0"
+  },
+  "devDependencies": {
+    "turbo": "^2.5.8"
   }
 }
